baml_language/crates/baml_tests/snapshots/compiles/closure_loop_variable/baml_tests__compiles__closure_loop_variable__03_hir.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== HIR2 ===
function user.sum_array(arr: int[]) -> int  [expr] {
  { let sum = 0; let total = []; for let i in arr {  } total.push(() -> { { sum Add= i } }); for let cb in total { cb() } } sum
}

--- captures ---
lambda () in ?: captures [sum, i]
