baml_language/crates/baml_tests/snapshots/compiles/closure_loop_variable/baml_tests__compiles__closure_loop_variable__04_5_mir.snap
---
source: crates/baml_tests/src/generated_tests.rs
assertion_line: 9156
---
=== MIR2 ===
fn user.sum_array(arr: int[]) -> int {
    // Locals:
    let _0: int // _0 // return
    let _1: int[] // arr // param
    let _2: int // sum [captured]
    let _3: (() -> void throws never)[] // total
    let _4: baml.iter.Iterator<Error = never, Item = int>
    let _5: unknown
    let _6: bool
    let _7: int
    let _8: int // i [captured]
    let _9: void
    let _10: () -> void throws never
    let _11: (() -> void throws never)[]
    let _12: baml.iter.Iterator<Error = never, Item = () -> void throws never>
    let _13: unknown
    let _14: bool
    let _15: () -> void throws never
    let _16: () -> void throws never // cb
    let _17: void
    let _18: () -> void throws never

    bb0: {
        _2 = const 0_i64;
        _3 = []: never[];
        _4 = virtual_call iter as baml.iter.Iterable<Item = int, Error = never>(copy _1) -> [bb1];
    }

    bb1: {
        _5 = virtual_call next as baml.iter.Iterator<Item = int, Error = never>(copy _4) -> [bb2];
    }

    bb2: {
        _6 = is_type(copy _5, baml.iter.Done);
        branch copy _6 -> [bb4, bb3];
    }

    bb3: {
        _7 = copy _5;
        fresh_cell(_8);
        _8 = copy _7;
        _10 = make_closure lambda[0](copy _2, copy _8);
        _9 = call const fn baml.Array.push(copy _3, copy _10) -> [bb1];
    }

    bb4: {
        _11 = copy _3;
        _12 = virtual_call iter as baml.iter.Iterable<Item = () -> void throws never, Error = never>(copy _11) -> [bb5];
    }

    bb5: {
        _13 = virtual_call next as baml.iter.Iterator<Item = () -> void throws never, Error = never>(copy _12) -> [bb6];
    }

    bb6: {
        _14 = is_type(copy _13, baml.iter.Done);
        branch copy _14 -> [bb8, bb7];
    }

    bb7: {
        _15 = copy _13;
        fresh_cell(_16);
        _16 = copy _15;
        _18 = copy _16;
        _17 = call copy _18() -> [bb5];
    }

    bb8: {
        _0 = copy _2;
        goto -> bb9;
    }

    bb9: {
        return;
    }
}

// lambda[0]
fn .<lambda(sum_array, 0)>() -> null {
    // Locals:
    let _0: null // _0 // return
    let _1: int

    bb0: {
        _1 = copy capture[1];
        capture[0] = copy capture[0] + copy _1;
        _0 = const null;
        goto -> bb1;
    }

    bb1: {
        return;
    }
}
