baml_language/crates/baml_tests/snapshots/compiles/closure_loop_variable/baml_tests__compiles__closure_loop_variable__04_tir.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== TIR2 ===
function user.sum_array(arr: int[]) -> int throws never {
  { : int
    let sum = 0 : 0 -> int
    let total = [] : never[] -> (() -> void throws never)[] (evolving)
    for let i in arr
      { : int
        total.push(() -> { ... }) : int
          () -> { ... } : () -> void throws never
            {
              sum Add= i
            }
      }
    for let cb in total
      { : void
        cb() : void
      }
    sum : int
  }
}
lambda user.sum_array {
}
