baml_language/crates/baml_tests/snapshots/compiles/closure_loop_variable/baml_tests__compiles__closure_loop_variable__05_diagnostics.snap
---
source: crates/baml_tests/src/generated_tests.rs
assertion_line: 5759
---
=== COMPILER2 DIAGNOSTICS ===
No errors found.
